INTYGFV-14370: Updated gradle and dependency versions. Applied necessary code changes. Some cleanup. (#769)